<resources>
    <string name="app_name">MySalamAlaykApp</string>


    <string name="titre_connexion">Bienvenue sur SalamAlaykApp</string>
    <string name="user_Name">Entrez votre identifiant</string>
    <string name="pass_Word">motdepasse</string>
    <string name="sign_In">Se Connecter</string>


    <string name="MenuText">Reservez Votre villa de Rêve</string>


    <string name="register" href="activity">creer un compte</string>

    <string name="user_nameRegistration">nom utilisateur</string>
    <string name="email_Registration">votre adresse mail</string>
    <string name="password_Registration">motdepasse</string>

    <string name="button_miseEnLocation">+ Mettre un bien en location</string>



    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
</resources>